--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Project_Neret_Thomas</string>
+    <string name="detail_text_description">Ecran Detail</string>
 </resources>
